--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -22,7 +22,9 @@
       "item3": "Natural Drinks",
       "item4": "Grains & Dried Goods",
       "item5": "Spices & Flavors",
-      "item6": "Ready-Made Meals"
+      "item6": "Ready-Made Meals",
+      "item7": "Yogurt & Cheese",
+      "item8": "Dried Sweets & Cookies"
     }
   },
   "whyUs": {
