--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -54,7 +54,7 @@
     "title": "Our Dedicated Team",
     "subtitle": "Meet the people who work daily to provide you with the best service.",
     "owner_name": "Danar Kayfi",
-    "owner_role": "Store Manager",
+    "owner_role": "Store Owner",
     "owner_desc": "The general manager and founder of Kayfi Store, with a vision to deliver high quality to customers.",
     "supervisor_name": "Kayfi Hassan",
     "supervisor_role": "Store Supervisor",
