--- a/src/locales/ku/translation.json
+++ b/src/locales/ku/translation.json
@@ -54,7 +54,7 @@
         "title": "تیمی کارامەی ئێمە",
         "subtitle": "ئاشنابن بەو کەسانەی کە ڕۆژانە کاردەکەن بۆ پێشکەشکردنی باشترین خزمەتگوزاری.",
         "owner_name": "دانەر کەیفی",
-        "owner_role": "بەڕێوەبەری فرۆشگا",
+        "owner_role": "خاوەنی فرۆشگا",
         "owner_desc": "بەڕێوەبەری گشتی و دامەزرێنەری فرۆشگای کەیفی، خاوەن دیدگایەکە بۆ گەیاندنی کوالێتی بەرز بە کڕیاران.",
         "supervisor_name": "کیفی حسن",
         "supervisor_role": "سەرپەرشتیاری فرۆشگا",
